# GENet

./: README.md  WandB.json  main.py  model.py
gauge_net/: setup.py
gauge_net/gauge_net.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
gauge_net/src/: __main__.py  eval.py  model.py  train.py  utils.py
src/: data.py  eval.py  main.py  model.py  pyproject.toml  requirements.txt  setup.py  train.py  utils.py
src/gauge_net/: __init__.py  __main__.py  config.json  data.py  eval.py  model.py  train.py  utils.py
