[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gauge_net"  
version = "0.1.0"  
dependencies = [
    "torch==1.9.0",
    "numpy==1.22.0",
    "wandb"
]  

[project.scripts]
gauge_net_train = "gauge_net.__main__:main"
gauge_net_eval = "gauge_net.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
gauge_net = ["config.json"]